// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`frodo config-manager delete scripts "frodo config-manager delete scripts -i 3a746af6-13c3-440f-ab1f-6474410f1883 -m forgeops": should delete a specific script by ID 1`] = `""`;

exports[`frodo config-manager delete scripts "frodo config-manager delete scripts -i 3a746af6-13c3-440f-ab1f-6474410f1883 -m forgeops": should delete a specific script by ID 2`] = `
"Experimental feature in use: 'frodo config-manager delete scripts'. This feature may change without notice.
Successfully deleted script FrodoDeleteById (3a746af6-13c3-440f-ab1f-6474410f1883)
✔ Finished deleting scripts.
"
`;

exports[`frodo config-manager delete scripts "frodo config-manager delete scripts -m forgeops": should delete eligible scripts across realms 1`] = `
"Experimental feature in use: 'frodo config-manager delete scripts'. This feature may change without notice.
✖ Error deleting scripts.
Error deleting scripts.
HTTP client error
  Code: ERR_BAD_REQUEST
  Status: 403
  Message: Default script Device Id (Match) - Client Side cannot be deleted
"
`;

exports[`frodo config-manager delete scripts "frodo config-manager delete scripts -m forgeops": should delete eligible scripts across realms 2`] = `1`;

exports[`frodo config-manager delete scripts "frodo config-manager delete scripts -n FrodoDeleteByName -m forgeops": should delete a specific script by name 1`] = `""`;

exports[`frodo config-manager delete scripts "frodo config-manager delete scripts -n FrodoDeleteByName -m forgeops": should delete a specific script by name 2`] = `
"Experimental feature in use: 'frodo config-manager delete scripts'. This feature may change without notice.
Successfully deleted script FrodoDeleteByName (0342f5f7-d33f-496d-8f12-1e1021fae8a9)
✔ Finished deleting scripts.
"
`;

exports[`frodo config-manager delete scripts "frodo config-manager delete scripts -p FrodoDeletePrefix -m forgeops": should delete scripts matching the prefix 1`] = `""`;

exports[`frodo config-manager delete scripts "frodo config-manager delete scripts -p FrodoDeletePrefix -m forgeops": should delete scripts matching the prefix 2`] = `
"Experimental feature in use: 'frodo config-manager delete scripts'. This feature may change without notice.
Successfully deleted script FrodoDeletePrefixOne (770ae490-3c2b-4f34-a7b4-b75a09c0de55)
Successfully deleted script FrodoDeletePrefixTwo (30f741d7-da0f-4123-a391-20139566caa8)
✔ Finished deleting scripts.
"
`;
